Correcciones en etiquetas

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <section id="divIMC" class="col-md-6">
     <div class="form-group">
      <h4 id="SubText">Para calcular su masa corporal por favor introduzca los siguientes valores:</h4>
-      <label for="usr">Peso (en kilogramos):</label>
+      <label for="usr">Peso (00.00 Kg):</label>
       <input type="text" class="form-control" id="txtPeso">
-      <label for="usr">Estatura (en metros):</label>
+      <label for="usr">Estatura (0.00 M):</label>
       <input type="text" class="form-control" id="txtEstatura">
       <div class="col-md-12">
       <div id="bottoncol" class="col-sm-offset-3 col-sm-6">
